src/markdown.y.output
Terminals which are not used

   MINUS
   PLUS
   RIGHTPARENTHESES
   LEFTPARENTHESES
   UNDERSCORE
   STAR
   DOUBLESTAR
   DOUBLEUNDERSCORE
   EXCLAMATION
   STARX


State 36 conflicts: 3 shift/reduce
State 37 conflicts: 6 shift/reduce
State 39 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 59 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 70 conflicts: 2 shift/reduce


Grammar

    0 $accept: markdownfile $end

    1 markdownfile: blocks
    2             | error

    3 blocks: blocks block
    4       | /* empty */

    5 block: lines
    6      | header
    7      | tablerows
    8      | block_p
    9      | block_ul
   10      | block_ol
   11      | block_indent_ul
   12      | block_indent_ol
   13      | block_indent_text
   14      | block_quote_ul
   15      | block_quote_ol
   16      | block_blank
   17      | block_quote_p
   18      | block_pre
   19      | block_indented_pre
   20      | pairedblock
   21      | raw_text

   22 header: H inline_elements LINEBREAK
   23       | QUOTEH inline_elements LINEBREAK

   24 raw_text: HTMLBLOCK TEXT LINEBREAK
   25         | HTMLBLOCK LINEBREAK
   26         | SCRIPTSTART inline_elements error
   27         | STYLESTART inline_elements error
   28         | SVGSTART inline_elements error
   29         | TRIPLEBACKTICK codespan error

   30 lines: lines line
   31      | line

   32 block_p: block_p line_p
   33        | line_p

   34 line_p: inline_elements LINEBREAK

   35 block_blank: block_blank line_blank
   36            | line_blank

   37 line_blank: BLANKLINE

   38 block_quote_p: block_quote_p line_quote_p
   39              | line_quote_p

   40 line_quote_p: LARGERTHAN inline_elements LINEBREAK

   41 block_ul: block_ul line_ul
   42         | line_ul

   43 line_ul: ULSTART inline_elements LINEBREAK
   44        | ULSTART LINEBREAK

   45 block_indent_ul: block_indent_ul line_indent_ul
   46                | line_indent_ul

   47 line_indent_ul: ULINDENT ULSTART inline_elements LINEBREAK

   48 block_quote_ul: block_quote_ul line_quote_ul
   49               | line_quote_ul

   50 line_quote_ul: QUOTEULSTART inline_elements LINEBREAK

   51 block_ol: block_ol line_ol
   52         | line_ol

   53 line_ol: OLSTART inline_elements LINEBREAK
   54        | OLSTART LINEBREAK

   55 block_indent_ol: block_indent_ol line_indent_ol
   56                | line_indent_ol

   57 line_indent_ol: OLINDENT OLSTART inline_elements LINEBREAK

   58 block_quote_ol: block_quote_ol line_quote_ol
   59               | line_quote_ol

   60 line_quote_ol: QUOTEOLSTART inline_elements LINEBREAK

   61 block_indent_text: block_indent_text line_indent_text
   62                  | line_indent_text

   63 line_indent_text: TEXTINDENT inline_elements LINEBREAK

   64 block_pre: block_pre line_pre
   65          | line_pre

   66 line_pre: PRE_INDENT CODETEXT
   67         | TRIPLEBACKTICK codespan TRIPLEBACKTICK LINEBREAK

   68 block_indented_pre: block_indented_pre line_indented_pre
   69                   | line_indented_pre

   70 line_indented_pre: INDENTED_PRE_INDENT CODETEXT

   71 pairedblock: SCRIPTSTART inline_elements SCRIPTEND
   72            | SCRIPTSTART SCRIPTEND
   73            | STYLESTART inline_elements STYLEEND
   74            | STYLESTART STYLEEND
   75            | SVGSTART inline_elements SVGEND
   76            | SVGSTART SVGEND

   77 tablerows: tablerows tablerow
   78          | tablerow

   79 tablerow: TABLEROWSTART tableceils LINEBREAK

   80 tableceils: tableceils tableceil
   81           | tableceil

   82 tableceil: inline_elements TABLECEILEND

   83 line: QUOTEBLANKLINE
   84     | SECTION LINEBREAK
   85     | VSECTION LINEBREAK

   86 inline_elements: inline_elements inline_element
   87                | inline_element

   88 inline_element: plaintext
   89               | link
   90               | standard_link
   91               | standard_image
   92               | inline_code

   93 link: LINK

   94 standard_link: LEFTSQUARE plaintext RIGHTSQUARE_LEFTBRACKET plaintext RIGHTBRACKET

   95 standard_image: EXCLAMATION_LEFTSQUARE plaintext RIGHTSQUARE_LEFTBRACKET plaintext RIGHTBRACKET

   96 plaintext: plaintext text_list
   97          | text_list

   98 text_list: TEXT
   99          | SPECIALCHAR

  100 inline_code: BACKTICK codespan BACKTICK
  101            | BACKTICK codespan error
  102            | BACKTICK error

  103 codespan: codespan code_list
  104         | code_list

  105 code_list: CODETEXT
  106          | SPECIALCHAR


Terminals, with rules where they appear

$end (0) 0
error (256) 2 26 27 28 29 101 102
TEXT (258) 24 98
SPECIALCHAR (259) 99 106
CODETEXT (260) 66 70 105
H (261) 22
QUOTEH (262) 23
HTMLBLOCK (263) 24 25
SECTION (264) 84
VSECTION (265) 85
SCRIPTSTART (266) 26 71 72
SCRIPTEND (267) 71 72
STYLESTART (268) 27 73 74
STYLEEND (269) 73 74
SVGSTART (270) 28 75 76
SVGEND (271) 75 76
LINK (272) 93
BACKTICK (273) 100 101 102
TRIPLEBACKTICK (274) 29 67
TABLEROWSTART (275) 79
TABLECEILEND (276) 82
ULINDENT (277) 47
OLINDENT (278) 57
TEXTINDENT (279) 63
PRE_INDENT (280) 66
INDENTED_PRE_INDENT (281) 70
LEFTSQUARE (282) 94
RIGHTSQUARE_LEFTBRACKET (283) 94 95
RIGHTBRACKET (284) 94 95
EXCLAMATION_LEFTSQUARE (285) 95
MINUS (286)
PLUS (287)
RIGHTPARENTHESES (288)
LEFTPARENTHESES (289)
UNDERSCORE (290)
STAR (291)
BLANKLINE (292) 37
LINEBREAK (293) 22 23 24 25 34 40 43 44 47 50 53 54 57 60 63 67 79
    84 85
LARGERTHAN (294) 40
DOUBLESTAR (295)
DOUBLEUNDERSCORE (296)
OLSTART (297) 53 54 57
ULSTART (298) 43 44 47
QUOTEBLANKLINE (299) 83
QUOTEOLSTART (300) 60
QUOTEULSTART (301) 50
EXCLAMATION (302)
STARX (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
markdownfile (50)
    on left: 1 2, on right: 0
blocks (51)
    on left: 3 4, on right: 1 3
block (52)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    on right: 3
header (53)
    on left: 22 23, on right: 6
raw_text (54)
    on left: 24 25 26 27 28 29, on right: 21
lines (55)
    on left: 30 31, on right: 5 30
block_p (56)
    on left: 32 33, on right: 8 32
line_p (57)
    on left: 34, on right: 32 33
block_blank (58)
    on left: 35 36, on right: 16 35
line_blank (59)
    on left: 37, on right: 35 36
block_quote_p (60)
    on left: 38 39, on right: 17 38
line_quote_p (61)
    on left: 40, on right: 38 39
block_ul (62)
    on left: 41 42, on right: 9 41
line_ul (63)
    on left: 43 44, on right: 41 42
block_indent_ul (64)
    on left: 45 46, on right: 11 45
line_indent_ul (65)
    on left: 47, on right: 45 46
block_quote_ul (66)
    on left: 48 49, on right: 14 48
line_quote_ul (67)
    on left: 50, on right: 48 49
block_ol (68)
    on left: 51 52, on right: 10 51
line_ol (69)
    on left: 53 54, on right: 51 52
block_indent_ol (70)
    on left: 55 56, on right: 12 55
line_indent_ol (71)
    on left: 57, on right: 55 56
block_quote_ol (72)
    on left: 58 59, on right: 15 58
line_quote_ol (73)
    on left: 60, on right: 58 59
block_indent_text (74)
    on left: 61 62, on right: 13 61
line_indent_text (75)
    on left: 63, on right: 61 62
block_pre (76)
    on left: 64 65, on right: 18 64
line_pre (77)
    on left: 66 67, on right: 64 65
block_indented_pre (78)
    on left: 68 69, on right: 19 68
line_indented_pre (79)
    on left: 70, on right: 68 69
pairedblock (80)
    on left: 71 72 73 74 75 76, on right: 20
tablerows (81)
    on left: 77 78, on right: 7 77
tablerow (82)
    on left: 79, on right: 77 78
tableceils (83)
    on left: 80 81, on right: 79 80
tableceil (84)
    on left: 82, on right: 80 81
line (85)
    on left: 83 84 85, on right: 30 31
inline_elements (86)
    on left: 86 87, on right: 22 23 26 27 28 34 40 43 47 50 53 57 60
    63 71 73 75 82 86
inline_element (87)
    on left: 88 89 90 91 92, on right: 86 87
link (88)
    on left: 93, on right: 89
standard_link (89)
    on left: 94, on right: 90
standard_image (90)
    on left: 95, on right: 91
plaintext (91)
    on left: 96 97, on right: 88 94 95 96
text_list (92)
    on left: 98 99, on right: 96 97
inline_code (93)
    on left: 100 101 102, on right: 92
codespan (94)
    on left: 103 104, on right: 29 67 100 101 103
code_list (95)
    on left: 105 106, on right: 103 104


state 0

    0 $accept: . markdownfile $end

    error  shift, and go to state 1

    $end                    reduce using rule 4 (blocks)
    TEXT                    reduce using rule 4 (blocks)
    SPECIALCHAR             reduce using rule 4 (blocks)
    H                       reduce using rule 4 (blocks)
    QUOTEH                  reduce using rule 4 (blocks)
    HTMLBLOCK               reduce using rule 4 (blocks)
    SECTION                 reduce using rule 4 (blocks)
    VSECTION                reduce using rule 4 (blocks)
    SCRIPTSTART             reduce using rule 4 (blocks)
    STYLESTART              reduce using rule 4 (blocks)
    SVGSTART                reduce using rule 4 (blocks)
    LINK                    reduce using rule 4 (blocks)
    BACKTICK                reduce using rule 4 (blocks)
    TRIPLEBACKTICK          reduce using rule 4 (blocks)
    TABLEROWSTART           reduce using rule 4 (blocks)
    ULINDENT                reduce using rule 4 (blocks)
    OLINDENT                reduce using rule 4 (blocks)
    TEXTINDENT              reduce using rule 4 (blocks)
    PRE_INDENT              reduce using rule 4 (blocks)
    INDENTED_PRE_INDENT     reduce using rule 4 (blocks)
    LEFTSQUARE              reduce using rule 4 (blocks)
    EXCLAMATION_LEFTSQUARE  reduce using rule 4 (blocks)
    BLANKLINE               reduce using rule 4 (blocks)
    LARGERTHAN              reduce using rule 4 (blocks)
    OLSTART                 reduce using rule 4 (blocks)
    ULSTART                 reduce using rule 4 (blocks)
    QUOTEBLANKLINE          reduce using rule 4 (blocks)
    QUOTEOLSTART            reduce using rule 4 (blocks)
    QUOTEULSTART            reduce using rule 4 (blocks)

    markdownfile  go to state 2
    blocks        go to state 3


state 1

    2 markdownfile: error .

    $default  reduce using rule 2 (markdownfile)


state 2

    0 $accept: markdownfile . $end

    $end  shift, and go to state 4


state 3

    1 markdownfile: blocks .
    3 blocks: blocks . block

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    H                       shift, and go to state 7
    QUOTEH                  shift, and go to state 8
    HTMLBLOCK               shift, and go to state 9
    SECTION                 shift, and go to state 10
    VSECTION                shift, and go to state 11
    SCRIPTSTART             shift, and go to state 12
    STYLESTART              shift, and go to state 13
    SVGSTART                shift, and go to state 14
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    TRIPLEBACKTICK          shift, and go to state 17
    TABLEROWSTART           shift, and go to state 18
    ULINDENT                shift, and go to state 19
    OLINDENT                shift, and go to state 20
    TEXTINDENT              shift, and go to state 21
    PRE_INDENT              shift, and go to state 22
    INDENTED_PRE_INDENT     shift, and go to state 23
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    BLANKLINE               shift, and go to state 26
    LARGERTHAN              shift, and go to state 27
    OLSTART                 shift, and go to state 28
    ULSTART                 shift, and go to state 29
    QUOTEBLANKLINE          shift, and go to state 30
    QUOTEOLSTART            shift, and go to state 31
    QUOTEULSTART            shift, and go to state 32

    $default  reduce using rule 1 (markdownfile)

    block               go to state 33
    header              go to state 34
    raw_text            go to state 35
    lines               go to state 36
    block_p             go to state 37
    line_p              go to state 38
    block_blank         go to state 39
    line_blank          go to state 40
    block_quote_p       go to state 41
    line_quote_p        go to state 42
    block_ul            go to state 43
    line_ul             go to state 44
    block_indent_ul     go to state 45
    line_indent_ul      go to state 46
    block_quote_ul      go to state 47
    line_quote_ul       go to state 48
    block_ol            go to state 49
    line_ol             go to state 50
    block_indent_ol     go to state 51
    line_indent_ol      go to state 52
    block_quote_ol      go to state 53
    line_quote_ol       go to state 54
    block_indent_text   go to state 55
    line_indent_text    go to state 56
    block_pre           go to state 57
    line_pre            go to state 58
    block_indented_pre  go to state 59
    line_indented_pre   go to state 60
    pairedblock         go to state 61
    tablerows           go to state 62
    tablerow            go to state 63
    line                go to state 64
    inline_elements     go to state 65
    inline_element      go to state 66
    link                go to state 67
    standard_link       go to state 68
    standard_image      go to state 69
    plaintext           go to state 70
    text_list           go to state 71
    inline_code         go to state 72


state 4

    0 $accept: markdownfile $end .

    $default  accept


state 5

   98 text_list: TEXT .

    $default  reduce using rule 98 (text_list)


state 6

   99 text_list: SPECIALCHAR .

    $default  reduce using rule 99 (text_list)


state 7

   22 header: H . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 73
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 8

   23 header: QUOTEH . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 74
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 9

   24 raw_text: HTMLBLOCK . TEXT LINEBREAK
   25         | HTMLBLOCK . LINEBREAK

    TEXT       shift, and go to state 75
    LINEBREAK  shift, and go to state 76


state 10

   84 line: SECTION . LINEBREAK

    LINEBREAK  shift, and go to state 77


state 11

   85 line: VSECTION . LINEBREAK

    LINEBREAK  shift, and go to state 78


state 12

   26 raw_text: SCRIPTSTART . inline_elements error
   71 pairedblock: SCRIPTSTART . inline_elements SCRIPTEND
   72            | SCRIPTSTART . SCRIPTEND

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    SCRIPTEND               shift, and go to state 79
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 80
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 13

   27 raw_text: STYLESTART . inline_elements error
   73 pairedblock: STYLESTART . inline_elements STYLEEND
   74            | STYLESTART . STYLEEND

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    STYLEEND                shift, and go to state 81
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 82
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 14

   28 raw_text: SVGSTART . inline_elements error
   75 pairedblock: SVGSTART . inline_elements SVGEND
   76            | SVGSTART . SVGEND

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    SVGEND                  shift, and go to state 83
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 84
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 15

   93 link: LINK .

    $default  reduce using rule 93 (link)


state 16

  100 inline_code: BACKTICK . codespan BACKTICK
  101            | BACKTICK . codespan error
  102            | BACKTICK . error

    error        shift, and go to state 85
    SPECIALCHAR  shift, and go to state 86
    CODETEXT     shift, and go to state 87

    codespan   go to state 88
    code_list  go to state 89


state 17

   29 raw_text: TRIPLEBACKTICK . codespan error
   67 line_pre: TRIPLEBACKTICK . codespan TRIPLEBACKTICK LINEBREAK

    SPECIALCHAR  shift, and go to state 86
    CODETEXT     shift, and go to state 87

    codespan   go to state 90
    code_list  go to state 89


state 18

   79 tablerow: TABLEROWSTART . tableceils LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    tableceils       go to state 91
    tableceil        go to state 92
    inline_elements  go to state 93
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 19

   47 line_indent_ul: ULINDENT . ULSTART inline_elements LINEBREAK

    ULSTART  shift, and go to state 94


state 20

   57 line_indent_ol: OLINDENT . OLSTART inline_elements LINEBREAK

    OLSTART  shift, and go to state 95


state 21

   63 line_indent_text: TEXTINDENT . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 96
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 22

   66 line_pre: PRE_INDENT . CODETEXT

    CODETEXT  shift, and go to state 97


state 23

   70 line_indented_pre: INDENTED_PRE_INDENT . CODETEXT

    CODETEXT  shift, and go to state 98


state 24

   94 standard_link: LEFTSQUARE . plaintext RIGHTSQUARE_LEFTBRACKET plaintext RIGHTBRACKET

    TEXT         shift, and go to state 5
    SPECIALCHAR  shift, and go to state 6

    plaintext  go to state 99
    text_list  go to state 71


state 25

   95 standard_image: EXCLAMATION_LEFTSQUARE . plaintext RIGHTSQUARE_LEFTBRACKET plaintext RIGHTBRACKET

    TEXT         shift, and go to state 5
    SPECIALCHAR  shift, and go to state 6

    plaintext  go to state 100
    text_list  go to state 71


state 26

   37 line_blank: BLANKLINE .

    $default  reduce using rule 37 (line_blank)


state 27

   40 line_quote_p: LARGERTHAN . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 101
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 28

   53 line_ol: OLSTART . inline_elements LINEBREAK
   54        | OLSTART . LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LINEBREAK               shift, and go to state 102

    inline_elements  go to state 103
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 29

   43 line_ul: ULSTART . inline_elements LINEBREAK
   44        | ULSTART . LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LINEBREAK               shift, and go to state 104

    inline_elements  go to state 105
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 30

   83 line: QUOTEBLANKLINE .

    $default  reduce using rule 83 (line)


state 31

   60 line_quote_ol: QUOTEOLSTART . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 106
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 32

   50 line_quote_ul: QUOTEULSTART . inline_elements LINEBREAK

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    inline_elements  go to state 107
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 33

    3 blocks: blocks block .

    $default  reduce using rule 3 (blocks)


state 34

    6 block: header .

    $default  reduce using rule 6 (block)


state 35

   21 block: raw_text .

    $default  reduce using rule 21 (block)


state 36

    5 block: lines .
   30 lines: lines . line

    SECTION         shift, and go to state 10
    VSECTION        shift, and go to state 11
    QUOTEBLANKLINE  shift, and go to state 30

    SECTION         [reduce using rule 5 (block)]
    VSECTION        [reduce using rule 5 (block)]
    QUOTEBLANKLINE  [reduce using rule 5 (block)]
    $default        reduce using rule 5 (block)

    line  go to state 108


state 37

    8 block: block_p .
   32 block_p: block_p . line_p

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25

    TEXT                    [reduce using rule 8 (block)]
    SPECIALCHAR             [reduce using rule 8 (block)]
    LINK                    [reduce using rule 8 (block)]
    BACKTICK                [reduce using rule 8 (block)]
    LEFTSQUARE              [reduce using rule 8 (block)]
    EXCLAMATION_LEFTSQUARE  [reduce using rule 8 (block)]
    $default                reduce using rule 8 (block)

    line_p           go to state 109
    inline_elements  go to state 65
    inline_element   go to state 66
    link             go to state 67
    standard_link    go to state 68
    standard_image   go to state 69
    plaintext        go to state 70
    text_list        go to state 71
    inline_code      go to state 72


state 38

   33 block_p: line_p .

    $default  reduce using rule 33 (block_p)


state 39

   16 block: block_blank .
   35 block_blank: block_blank . line_blank

    BLANKLINE  shift, and go to state 26

    BLANKLINE  [reduce using rule 16 (block)]
    $default   reduce using rule 16 (block)

    line_blank  go to state 110


state 40

   36 block_blank: line_blank .

    $default  reduce using rule 36 (block_blank)


state 41

   17 block: block_quote_p .
   38 block_quote_p: block_quote_p . line_quote_p

    LARGERTHAN  shift, and go to state 27

    LARGERTHAN  [reduce using rule 17 (block)]
    $default    reduce using rule 17 (block)

    line_quote_p  go to state 111


state 42

   39 block_quote_p: line_quote_p .

    $default  reduce using rule 39 (block_quote_p)


state 43

    9 block: block_ul .
   41 block_ul: block_ul . line_ul

    ULSTART  shift, and go to state 29

    ULSTART   [reduce using rule 9 (block)]
    $default  reduce using rule 9 (block)

    line_ul  go to state 112


state 44

   42 block_ul: line_ul .

    $default  reduce using rule 42 (block_ul)


state 45

   11 block: block_indent_ul .
   45 block_indent_ul: block_indent_ul . line_indent_ul

    ULINDENT  shift, and go to state 19

    ULINDENT  [reduce using rule 11 (block)]
    $default  reduce using rule 11 (block)

    line_indent_ul  go to state 113


state 46

   46 block_indent_ul: line_indent_ul .

    $default  reduce using rule 46 (block_indent_ul)


state 47

   14 block: block_quote_ul .
   48 block_quote_ul: block_quote_ul . line_quote_ul

    QUOTEULSTART  shift, and go to state 32

    QUOTEULSTART  [reduce using rule 14 (block)]
    $default      reduce using rule 14 (block)

    line_quote_ul  go to state 114


state 48

   49 block_quote_ul: line_quote_ul .

    $default  reduce using rule 49 (block_quote_ul)


state 49

   10 block: block_ol .
   51 block_ol: block_ol . line_ol

    OLSTART  shift, and go to state 28

    OLSTART   [reduce using rule 10 (block)]
    $default  reduce using rule 10 (block)

    line_ol  go to state 115


state 50

   52 block_ol: line_ol .

    $default  reduce using rule 52 (block_ol)


state 51

   12 block: block_indent_ol .
   55 block_indent_ol: block_indent_ol . line_indent_ol

    OLINDENT  shift, and go to state 20

    OLINDENT  [reduce using rule 12 (block)]
    $default  reduce using rule 12 (block)

    line_indent_ol  go to state 116


state 52

   56 block_indent_ol: line_indent_ol .

    $default  reduce using rule 56 (block_indent_ol)


state 53

   15 block: block_quote_ol .
   58 block_quote_ol: block_quote_ol . line_quote_ol

    QUOTEOLSTART  shift, and go to state 31

    QUOTEOLSTART  [reduce using rule 15 (block)]
    $default      reduce using rule 15 (block)

    line_quote_ol  go to state 117


state 54

   59 block_quote_ol: line_quote_ol .

    $default  reduce using rule 59 (block_quote_ol)


state 55

   13 block: block_indent_text .
   61 block_indent_text: block_indent_text . line_indent_text

    TEXTINDENT  shift, and go to state 21

    TEXTINDENT  [reduce using rule 13 (block)]
    $default    reduce using rule 13 (block)

    line_indent_text  go to state 118


state 56

   62 block_indent_text: line_indent_text .

    $default  reduce using rule 62 (block_indent_text)


state 57

   18 block: block_pre .
   64 block_pre: block_pre . line_pre

    TRIPLEBACKTICK  shift, and go to state 119
    PRE_INDENT      shift, and go to state 22

    TRIPLEBACKTICK  [reduce using rule 18 (block)]
    PRE_INDENT      [reduce using rule 18 (block)]
    $default        reduce using rule 18 (block)

    line_pre  go to state 120


state 58

   65 block_pre: line_pre .

    $default  reduce using rule 65 (block_pre)


state 59

   19 block: block_indented_pre .
   68 block_indented_pre: block_indented_pre . line_indented_pre

    INDENTED_PRE_INDENT  shift, and go to state 23

    INDENTED_PRE_INDENT  [reduce using rule 19 (block)]
    $default             reduce using rule 19 (block)

    line_indented_pre  go to state 121


state 60

   69 block_indented_pre: line_indented_pre .

    $default  reduce using rule 69 (block_indented_pre)


state 61

   20 block: pairedblock .

    $default  reduce using rule 20 (block)


state 62

    7 block: tablerows .
   77 tablerows: tablerows . tablerow

    TABLEROWSTART  shift, and go to state 18

    TABLEROWSTART  [reduce using rule 7 (block)]
    $default       reduce using rule 7 (block)

    tablerow  go to state 122


state 63

   78 tablerows: tablerow .

    $default  reduce using rule 78 (tablerows)


state 64

   31 lines: line .

    $default  reduce using rule 31 (lines)


state 65

   34 line_p: inline_elements . LINEBREAK
   86 inline_elements: inline_elements . inline_element

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LINEBREAK               shift, and go to state 123

    inline_element  go to state 124
    link            go to state 67
    standard_link   go to state 68
    standard_image  go to state 69
    plaintext       go to state 70
    text_list       go to state 71
    inline_code     go to state 72


state 66

   87 inline_elements: inline_element .

    $default  reduce using rule 87 (inline_elements)


state 67

   89 inline_element: link .

    $default  reduce using rule 89 (inline_element)


state 68

   90 inline_element: standard_link .

    $default  reduce using rule 90 (inline_element)


state 69

   91 inline_element: standard_image .

    $default  reduce using rule 91 (inline_element)


state 70

   88 inline_element: plaintext .
   96 plaintext: plaintext . text_list

    TEXT         shift, and go to state 5
    SPECIALCHAR  shift, and go to state 6

    TEXT         [reduce using rule 88 (inline_element)]
    SPECIALCHAR  [reduce using rule 88 (inline_element)]
    $default     reduce using rule 88 (inline_element)

    text_list  go to state 125


state 71

   97 plaintext: text_list .

    $default  reduce using rule 97 (plaintext)


state 72

   92 inline_element: inline_code .

    $default  reduce using rule 92 (inline_element)


state 73

   22 header: H inline_elements . LINEBREAK
   86 inline_elements: inline_elements . inline_element

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LINEBREAK               shift, and go to state 126

    inline_element  go to state 124
    link            go to state 67
    standard_link   go to state 68
    standard_image  go to state 69
    plaintext       go to state 70
    text_list       go to state 71
    inline_code     go to state 72


state 74

   23 header: QUOTEH inline_elements . LINEBREAK
   86 inline_elements: inline_elements . inline_element

    TEXT                    shift, and go to state 5
    SPECIALCHAR             shift, and go to state 6
    LINK                    shift, and go to state 15
    BACKTICK                shift, and go to state 16
    LEFTSQUARE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LINEBREAK               shift, and go to state 127

    inline_element  go to state 124
    link            go to state 67
    standard_link   go to state 68
    standard_image  go to state 69
    plaintext       go to state 70
    text_list       go to state 71
    inline_code     go to state 72


state 75

   24 raw_text: HTMLBLOCK TEXT . LINEBREAK

    LINEBREAK  shift, and go to state 128


state 76

   25 raw_text: HTMLBLOCK LINEBREAK .

    $default  reduce using rule 25 (raw_text)


state 77

   84 line: SECTION LINEBREAK .

    $default  reduce using rule 84 (line)


state 78

   85 line: VSECTION LINEBREAK .
